--- a/index.html
+++ b/index.html
@@ -58,95 +58,79 @@
         }
       };</pre>
     </p>
-    <p>Q.4 You are provided with a table containing some characters and their corresponding values. Your task will be to find the value from the table corresponding to an input character and return it. <br>
-        | P or p 	- PrepBytes      	| <br>
-        | Z or z 	- Zenith         	| <br>
-        | E or e 	- Expert Coder   	| <br>
-        | D or d 	- Data Structure 	| <br>
-        Note: You have to complete getValue function. No need to take any input.</p>
-    <p><pre>Ans.4 const getValue = (a) => {
-        if (a == "P" || a == "p") {
-          return ("PrepBytes")
+    <p>Q.4 Write a program which ask user for no of lines and print a pattern using an asterik. Note: You have to complete Print_pattern. No need to take any input.</p>
+    <p><pre>Ans.4 const Print_pattern = (N) => 
+      {
+        for (i=1; i<=N; i++) {
+          let pattern=""
+          for (j=1; j<=i; j++) {
+            pattern+="*"
+          }
+          console.log(pattern)
         }
-        else if (a == "Z" || a == "z") {
-          return ("Zenith")
-        }
-        else if (a == "E" || a == "e") {
-          return ("Expert Coder")
-        }
-        else if (a == "D" || a == "d") {
-          return ("Data Structure")
-        }
+      };</pre>
+    </p>
+    <p>Q.5 Write a program which takes  a number from user and print all odd numbers in between 2 and N, but print 2 first. Note: You have to complete Print_Odd. No need to take any input.</p>
+    <p><pre>Ans.5 const Print_Odd = (N) => 
+      {
+         console.log (2);
+         for (i=2; i<=N; i++) {
+           if (i%2!==0) {
+             console.log (i);
+           }
+         }
+      };</pre>
+    </p>
+    <p>Q.6 Write a program that takes a number from the user and get the sum of the digits present in the number. Note: You have to complete Number_Sum. No need to take any input.</p>
+    <p><pre>Ans.6 const Number_Sum = (N) => 
+      { var a=0;
+        while(N) {
+          if (N < 10) {
+          a+=N;
+          return a;
+          }
+          a+=N%10;
+          N=parseInt(N/10);
+        }	return a;
+      };</pre>
+    </p>
+    <p>Q.7 You are given an integer 
+      N, and your task is to find the sum of all the even integers starting from 1 upto N (N inclusive). Note: You have to complete findSum function. No need to take any input.</p>
+    <p><pre>Ans.7 const findSum = (n) => {
+      var c=0;
+        for (i=1; i<=n; i++) {
+          if (i%2===0) {
+            c+=i;
+          }
+        } return c;
     };</pre>
     </p>
-    <p>Q.5 Take three numbers and print the largest number among them if all of three are same print  
-    −1. Note: You have to complete Max_out_of_three. No need to take any input.</p>
-    <p><pre>Ans.5 const Max_out_of_three = (A,B,C) => {
-        if (A > B && A > C) {
-          return (A)
-        }
-        else if (B > A && B > C) {
-          return (B)
-        }
-        else if (C > B && C > A) {
-          return (C)
-        }
-        else if (A == B && B == C) {
-          return ("-1")
-        }
-    };</pre>
+    <p>Q.8 Among all the digits from 0−9, PrepBuddy likes number 5. He has a number and wants you to find out the number of times 5 occurred in the given number. Note: You have to complete Find_Five. No need to take any input.</p>
+    <p><pre>Ans.8 const Find_Five = (N) => 
+      { var c=0;
+         while (N) {
+           if (N < 10) {
+             if (N===5) {
+               c++;
+               return c;
+             }
+           }
+           a=N%10;
+             if (a===5) {
+               c++;
+             }
+           N=parseInt(N/10);
+         } return c;
+      };</pre>
     </p>
-    <p>Q.6 Write a program to make a simple calculator using switch statement that takes operator and two numbers from user and print the result after operation. Note: You have to complete Calculator. No need to take any input</p>
-    <p><pre>Ans.6 const Calculator = (A, B, C) => 
-        {
-            switch(A) {
-              case "+":
-              return (B+C)
-              case "-":
-              return (B-C)
-              case "*":
-              return (B*C)
-              case "/":
-              return (B/C)
-              default:
-              return "Invalid input"
-            }
-        };</pre>
-    </p>
-    <p>Q.7 Write a program that takes a number and prints whether the number is divisible by 6 and 9 or not. Note: You have to complete Check_divisibility. No need to take any input</p>
-    <p><pre>Ans.7 const Check_divisibility = (N) => {
-        if (N%6 === 0 && N%9 === 0) {
-         return ("Divisible by both")
-        }
-        else {
-          return ("Not Divisible by both")
-        }
-     };</pre>
-    </p>
-    <p>Q.8 You are given 3 distinct integers X, Y, and Z, and your task is to find and return the second smallest integer among the three provided integers. Note: You have to complete findSndSmallest function. No need to take any input.</p>
-    <p><pre>Ans.8 const findSndSmallest = (x,y,z) => {
-        if ((x < y && y < z) || (y > z && y < x)) {
-          return (y)
-        }
-        else if ((y < x && x < z) || (x > z && x < y)) {
-          return (x)
-        }
-        else if ((x < z && z < y) || (z > y && z < x)) {
-          return (z)
-        }
-    };</pre>
-    </p>
-    <p>Q.9 Write a program takes takes three angles and checks whether the triangle is acute or obtuse.
-     Note: You have to complete Triangle_Check. No need to take any input</p>
-    <p><pre>Ans.9 const Triangle_Check = (A,B,C) => {
-        if (A>90 || B>90 || C>90) {
-          return ("obtuse")
-        }
-        else {
-          return ("acute")
-        }
-         
-     };</pre>
+    <p>Q.9 Take a number from the user and print the count of digits in that number. Note: You have to complete Find_Digits. No need to take any input.</p>
+    <p><pre>Ans.9 const Find_Digits = (N) => 
+      { var c=0; 
+        while(N) {
+          c++;
+          N=parseInt(N/10);
+        } return c;
+      };</pre>
     </p>
 </body>
 </html>
